--- a/conf/php.ini
+++ b/conf/php.ini
@@ -380,7 +380,7 @@ expose_php = On
 ; Maximum execution time of each script, in seconds
 ; http://php.net/max-execution-time
 ; Note: This directive is hardcoded to 0 for the CLI SAPI
-max_execution_time = 30
+max_execution_time = 600
 
 ; Maximum amount of time each script may spend parsing request data. It's a good
 ; idea to limit this time on productions servers in order to eliminate unexpectedly
@@ -390,7 +390,7 @@ max_execution_time = 30
 ; Development Value: 60 (60 seconds)
 ; Production Value: 60 (60 seconds)
 ; http://php.net/max-input-time
-max_input_time = 60
+max_input_time = 600
 
 ; Maximum input variable nesting level
 ; http://php.net/max-input-nesting-level
@@ -401,7 +401,7 @@ max_input_time = 60
 
 ; Maximum amount of memory a script may consume (128MB)
 ; http://php.net/memory-limit
-memory_limit = 128M
+memory_limit = 256M
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; Error handling and logging ;
@@ -474,7 +474,7 @@ error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT
 ; Development Value: On
 ; Production Value: Off
 ; http://php.net/display-errors
-display_errors = Off
+display_errors = On
 
 ; The display of errors which occur during PHP's startup sequence are handled
 ; separately from display_errors. PHP's default behavior is to suppress those
@@ -1920,8 +1920,10 @@ ldap.max_links = -1
 [XDebug]
 ; Debug Config
 xdebug.remote_enable = 1
-xdebug.remote_handler = "dbgp"
-xdebug.remote_connect_back = 1
-xdebug.remote_port = 9000
-;xdebug.remote_log = "/var/log/dnmp/php.xdebug.log"
-
+;xdebug.remote_handler = "dbgp"
+;xdebug.remote_mode = "req"
+;xdebug.remote_connect_back = on
+xdebug.remote_autostart = on
+xdebug.remote_host = docker.for.mac.localhost
+xdebug.remote_port = 9001
+#xdebug.remote_log = /var/log/php-fpm/x-debug-remote.log
